x11/clutter-keymap-x11: Honor XkbNewKeyboardNotify events

We already select for XkbNewKeyboardNotify events but are not acting
on them. Start doing so.

https://bugzilla.gnome.org/show_bug.cgi?id=694267